--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,18 @@
 language: php
 
 php:
-  - 5.5
   - 5.6
   - 7.0
+  - 7.1
+  - 7.2
 
 sudo: false
 
 env:
   matrix:
-    - DB=mysql db_dsn='mysql://travis@0.0.0.0/cakephp_test'
-    - DB=pgsql db_dsn='postgres://postgres@127.0.0.1/cakephp_test'
-    - DB=sqlite db_dsn='sqlite:///:memory:'
+    - disable_E_USER_DEPRECATED=true DB=mysql db_dsn='mysql://travis@0.0.0.0/cakephp_test'
+    - disable_E_USER_DEPRECATED=false DB=pgsql db_dsn='postgres://postgres@127.0.0.1/cakephp_test'
+    - disable_E_USER_DEPRECATED=true DB=sqlite db_dsn='sqlite:///:memory:'
   global:
     - DEFAULT=1
 
@@ -22,10 +23,10 @@ matrix:
   fast_finish: true
 
   include:
-    - php: 5.5
+    - php: 5.6
       env: PHPCS=1 DEFAULT=0
 
-    - php: 5.5
+    - php: 5.6
       env: COVERALLS=1 DEFAULT=0
 
     - php: hhvm
